Prevent Live text from wrapping at breakpoint 7 JW8-10756

--- a/src/css/controls/imports/controlbar.less
+++ b/src/css/controls/imports/controlbar.less
@@ -43,7 +43,7 @@
                 }
             }
 
-            .jw-icon-inline,
+            .jw-icon-inline:not(.jw-text-live),
             .jw-icon-volume {
                 .square(60px);
 
